--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ legend {
 .s01 form legend {
   font-size: 72px;
   line-height: 1;
-  color: #3f3015;
+  color: #ffffff;
   margin-bottom: 60px;
 }
 
